fix(front): tab5 left align info

--- a/frontend/app/zh-forms/tabs/tab5/zh-form-tab5.component.scss
+++ b/frontend/app/zh-forms/tabs/tab5/zh-form-tab5.component.scss
@@ -34,3 +34,7 @@ select.custom-select option:disabled {
 ::ng-deep .wide-tooltip .tooltip-inner {
   max-width: 600px;
 }
+
+.bulle {
+  text-align: left;
+}
